sumo/tests/duarouter/errors/no_input_ignore/options.duarouter
--net-file=input_net.net.xml -o routes.rou.xml --ignore-errors
